k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hubnity
  labels:
    app.kubernetes.io/name: hubnity
